--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,28 @@
     <artifactId>Integration-de-donn-es</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
-    </dependencies>
+    <dependencies> </dependencies>
+    <build>
+    <resources>
+        <resource>
+            <directory>src/main/java</directory>
+            <includes>
+                <include>**/*.properties</include>
+            </includes>
+        </resource>
+    </resources>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.3.2</version>
+            <configuration>
+                <source>1.6</source>
+                <target>1.6</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+   
 
 </project>
